# mini-rpc

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  client_run.sh  server_run.sh
contract/: gen_rand_num.h  gen_rand_num.pb.cc  gen_rand_num.pb.h
contract/proto/: gen_rand_num.proto
examples/: CMakeLists.txt  server.cpp
include/mini_rpc/: address.h  config.h  connection_manager.h  contract_base.h  define.h  poll.h  server_impl.h
include/mini_rpc/client/: client.h
include/mini_rpc/proto/: request.pb.cc  request.pb.h
include/mini_rpc/serialization/: Buffer.h  IByteStream.h  OByteStream.h  SerializableIF.h  SerializableObjectBegin.macro.h  Serializer.h
include/mini_rpc/serialization/Internal/: SerializableObjectImpl.macro.h  SerializerImpl.h
include/mini_rpc/server/: config.h  connection_manager.h  define.h  poll.h  request_handler.h  server.h  server_impl.h
include/mini_rpc/shared/: logging.h  protobuf_handler.h  utils.h
proto/: request.proto
src/client/: client.cpp  client_main.cpp
src/server/: connection_manager.cpp  main.cpp  server.cpp  server_impl.cpp
src/server/linux/: poll_impl.cpp
src/server/osx/: poll_impl.cpp
src/shared/: protobuf_handler.cpp  utils.cpp
test/: CMakeLists.txt  serialization_test.cpp
tests/: CMakeLists.txt
